language/move-lang/tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:3:27
  │
3 │     struct R has key { s: signer }
  │                           ^^^^^^
  │                           │
  │                           Invalid field type. The struct was declared with the ability 'key' so all fields require the ability 'store'
  │                           The type 'signer' does not have the ability 'store'

error: 

    ┌── tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:11:9 ───
    │
 11 │     fun t1(s: &signer) {
    │         ^^ Invalid parameter for script function 't1'
    ·
 11 │     fun t1(s: &signer) {
    │               ------- Found: '&signer'. But expected one of: 'u8', 'u64', 'u128', 'bool', 'address', 'vector<_>'
    │

error: 

    ┌── tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:12:9 ───
    │
 12 │         0x2::M::store_signer(s)
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::M::store_signer'. The call expected 2 argument(s) but got 1
    ·
 12 │         0x2::M::store_signer(s)
    │                             --- Found 1 argument(s) here
    │

error: 

    ┌── tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:18:9 ───
    │
 18 │     fun t2(s: signer, s2: &signer) {
    │         ^^ Invalid parameter for script function 't2'
    ·
 18 │     fun t2(s: signer, s2: &signer) {
    │                           ------- Found: '&signer'. But expected one of: 'u8', 'u64', 'u128', 'bool', 'address', 'vector<_>'
    │

error: 

    ┌── tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:19:9 ───
    │
 19 │         0x2::M::store_signer(s2)
    │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::M::store_signer'. The call expected 2 argument(s) but got 1
    ·
 19 │         0x2::M::store_signer(s2)
    │                             ---- Found 1 argument(s) here
    │

